---
source: compiler/driver/tests/diagnostics_snapshots.rs
expression: format_all_errors(&out)
---
error[P006]: Invalid expression
  --> test.ny:2:22
error[P006]: Invalid expression
  --> test.ny:2:27
